# SimpleFramework

./: CMakeLists.txt
Common/: CMakeLists.txt
Common/Core/: CMakeLists.txt  atRenderer.cpp
Common/Geometry/: CMakeLists.txt  atMesh.h  atScene.cpp
Common/Loaders/: CMakeLists.txt
Common/Renderers/: CMakeLists.txt  atLineShader.cpp
Common/Utilities/: CMakeLists.txt  atUtility.cpp  atUtility.h
Common/WindowMgt/: CMakeLists.txt
CorrespondenceMarker/Source/: Source.cpp
data/EggData/: EggColorMaterial.mtl
data/M3DFigures/M3DFigures/: NikeiFemale.fbx  NikeiMale.fbx
data/M3DFigures/M3DFigures/Female/Morphs/: M3DFemale_LOD0.Aged Posture.morph  M3DFemale_LOD0.Basic Weight 1.morph  M3DFemale_LOD0.Bulbous 1.morph  M3DFemale_LOD0.Bulbous 2.morph  M3DFemale_LOD0.CBM10YearOld.morph  M3DFemale_LOD0.CBM5YearOld.morph  M3DFemale_LOD0.CBMAdult.morph  M3DFemale_LOD0.CBMAgedBody1.morph  M3DFemale_LOD0.CBMAgedBody2.morph  M3DFemale_LOD0.CBMOlderTeen.morph  M3DFemale_LOD0.CBMYoungTeen.morph  M3DFemale_LOD0.CHMAgedHead1.morph  M3DFemale_LOD0.CHMAgedHead2.morph  M3DFemale_LOD0.CHMAgedHead3.morph  M3DFemale_LOD0.CHMAgedHead4.morph  M3DFemale_LOD0.CHMAgedHead5.morph  M3DFemale_LOD0.CTRLCheekbonesSize.morph  M3DFemale_LOD0.CTRLCrowsFeetHD.morph  M3DFemale_LOD0.Eye Sag Top.morph  M3DFemale_LOD0.Eyelid Size.morph  M3DFemale_LOD0.FBMBodySize.morph  M3DFemale_LOD0.FBMBodyTone.morph  M3DFemale_LOD0.FBMBodybuilderDetails.morph  M3DFemale_LOD0.FBMBodybuilderSize.morph  M3DFemale_LOD0.FBMCoralBody.morph  M3DFemale_LOD0.FBMEmaciated.morph  M3DFemale_LOD0.FBMFitnessDetails.morph  M3DFemale_LOD0.FBMFitnessSize.morph  M3DFemale_LOD0.FBMGogoBody.morph  M3DFemale_LOD0.FBMHeavy.morph  M3DFemale_LOD0.FBMHeight.morph  M3DFemale_LOD0.FBMHeight[NEGATIVE].morph  M3DFemale_LOD0.FBMPearFigure.morph  M3DFemale_LOD0.FBMThin.morph  M3DFemale_LOD0.FHMCoralHead.morph  M3DFemale_LOD0.FHMGogoHead.morph  M3DFemale_LOD0.G2F_EarAlienA.morph  M3DFemale_LOD0.G2F_EarCatBack.morph  M3DFemale_LOD0.G2F_EarChimp.morph  M3DFemale_LOD0.G2F_EarDeerBack.morph  (+1675 more)
data/M3DFigures/M3DFigures/Male/: 165Male_Nekei.corres  1k_Male_Nekei.corres  2kHMale_Nekei.corres  2kMale_Nekei.corres  2k_SE_Male_Nekei.corres  369Male_Nekei - Copy.corres  4k_Male_Nekei.corres  LOD0_NekeiMale.fbx  LOD0_NekeiMale_Shape.fbx  M3DMale_LOD0.mtl  M3DMale_LOD0_Clean.mtl  M3DMale_LOD0_Shape.fbx  M3DMale_LOD0_noBlendshape.fbx  M3DMale_LOD0_noBlendshape_superstripped.fbx  M3DMale_Nekei_shape.mtl  MaleHead_blah.mtl  __Male_Nekei - Copy.corres
data/M3DFigures/M3DFigures/Male/Morphs/: M3DMale_LOD0.Aged Posture.morph  M3DMale_LOD0.Basic Weight 1.morph  M3DMale_LOD0.Bulbous 1.morph  M3DMale_LOD0.Bulbous 2.morph  M3DMale_LOD0.CBM10YearOld.morph  M3DMale_LOD0.CBM5YearOld.morph  M3DMale_LOD0.CBMAdult.morph  M3DMale_LOD0.CBMAgedBody1.morph  M3DMale_LOD0.CBMAgedBody2.morph  M3DMale_LOD0.FBMThin.morph  (+1782 more)
